<resources>
    <string name="app_name">Planisphere</string>
    <string name="action_time">Date / Time</string>
    <string name="action_location">Location</string>
    <string name="action_about">About</string>
    <string name="action_magnitude">Max. magnitude</string>
    <string name="action_theme">Theme</string>
    <string name="action_settings">Settings</string>
    <string name="display_options">Display options</string>
    <string name="theme">Theme</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="max_magnitude">Max. apparent magnitude (mag)</string>
    <string name="set_to_now">Set time to now</string>
    <string name="loc_src_gps">GPS</string>
    <string name="loc_src_fixed">fixed location</string>
    <string name="location_src">Location source:</string>
    <string name="location_url">Location:</string>
    <string name="gps_status">GPS status:</string>
    <string name="gps_fix_time">Time of fix:</string>
    <string name="gps_status_unknown">unknown</string>
    <string name="gps_status_nopermission">no permission</string>
    <string name="gps_status_disabled">disabled</string>
    <string name="gps_status_waiting">waiting</string>
    <string name="gps_status_received">received</string>
    <string name="gps_no_permission">App has no permission to access GPS. Using last known position.</string>
    <string name="gps_disabled">Device has GPS disabled. Using last known position.</string>
    <string name="gps_waiting">Waiting for position from GPS. Using last known position.</string>
    <string name="gps_received">Received GPS position</string>
    <string name="gps_received_new">Received new GPS position</string>
    <string name="latitude">Latitude (-90..90):</string>
    <string name="longitude">Longitude (-180..180):</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_night">Night</string>
    <string name="horizon">Horizon</string>
    <string name="equator">Celestial equator</string>
    <string name="ecliptic">Ecliptic</string>
    <string name="azimuthal_grid">Azimuthal grid</string>
    <string name="equatorial_grid">Equatorial grid</string>
    <string name="constellation_lines">Constellation lines</string>
    <string name="constellation_boundaries">Constellation boundaries</string>
    <string name="constellation_names">Constellation names</string>
    <string name="solar_system">Solar system</string>
    <string name="solar_names">Solar system names</string>
    <string name="stars">Stars</string>
    <string name="sun">Sun</string>
    <string name="moon">Moon</string>
    <string name="planet_mercury">Mercury</string>
    <string name="planet_venus">Venus</string>
    <string name="planet_earth">Earth</string>
    <string name="planet_mars">Mars</string>
    <string name="planet_jupiter">Jupiter</string>
    <string name="planet_saturn">Saturn</string>
    <string name="planet_uranus">Uranus</string>
    <string name="planet_neptune">Neptune</string>
    <string name="const_language">Language for constellation names:</string>
    <string name="lang_abr">Abbreviation</string>
    <string name="lang_latin">Latin</string>
    <string name="lang_sysdefault">System language</string>
    <string name="lang_english">English</string>
    <string name="lang_german">German</string>
    <string name="lang_chinese">Chinese</string>
    <string name="lang_spanish">Spanish</string>
    <string name="lang_norwegian">Norwegian</string>
    <string name="lang_french">French</string>
    <string name="lang_italian">Italian</string>
    <string name="keep_screen_on">Keep screen on</string>
    <string name="time_auto_update">Keep chart updated to current time</string>
    <string name="direction_n">N</string>
    <string name="direction_e">E</string>
    <string name="direction_s">S</string>
    <string name="direction_w">W</string>
    <string name="objects_nearby">Objects nearby</string>
    <string name="azimuth">Azimuth</string>
    <string name="elevation">Elevation</string>
    <string name="type">Type</string>
    <string name="apparent_magnitude">Apparent magnitude</string>
    <string name="RA">Right ascension</string>
    <string name="DEC">Declination</string>
    <string name="helio_ecliptic_lat">Heliocentric ecliptic latitude</string>
    <string name="helio_ecliptic_lon">Heliocentric ecliptic longitude</string>
    <string name="distance_sun">Distance to Sun</string>
    <string name="geo_ecliptic_lat">Geocentric ecliptic latitude</string>
    <string name="geo_ecliptic_lon">Geocentric ecliptic longitude</string>
    <string name="distance_earth">Distance to Earth</string>
    <string name="star">Star</string>
    <string name="planet">Planet</string>
    <string name="unknown">unknown</string>
    <string name="onlyVisiblePlanets">Only show visible planets</string>
    <string name="rise">Rise (local time)</string>
    <string name="riseUtc">Rise (UTC)</string>
    <string name="set">Set (local time)</string>
    <string name="setUtc">Set (UTC)</string>
    <string name="astroDawn">Begin morning astronomical twilight</string>
    <string name="nauticalDawn">Begin morning nautical twilight</string>
    <string name="civilDawn">Begin morning civil twilight</string>
    <string name="civilDusk">End evening civil twilight</string>
    <string name="nauticalDusk">End evening nautical twilight</string>
    <string name="astroDusk">End evening astronomical twilight</string>
    <string name="phase">Phase</string>
    <string name="textScalingFactor">Text Scaling Factor:</string>
    <string name="brightStarCatalogue">Bright Star Catalogue</string>
    <string name="bayerFlamsteed">Bayer/Flamsteed</string>
    <string name="starNames">Star names</string>
    <string name="textScalingHint" translatable="false">1.0</string>
    <string name="previousFullMoon">Previous Full Moon</string>
    <string name="previousNewMoon">Previous New Moon</string>
    <string name="nextFullMoon">Next Full Moon</string>
    <string name="nextNewMoon">Next New Moon</string>
    <string name="adjustTimeVolume">Adjust time with volume buttons</string>
</resources>